--- a/static/other/nginx/dev/dsp.start.conf
+++ b/static/other/nginx/dev/dsp.start.conf
@@ -29,7 +29,7 @@ server {
   }
 
   #STATIC FILES
-  location ~* ^/(js|css|img|fonts)/ {
+  location ~* ^/(js|css|img|fonts|i18n)/ {
     try_files $uri =404;
 
     add_header Access-Control-Allow-Origin "*";
@@ -63,10 +63,6 @@ server {
 
   location = /app {
     return 302 /app/;
-  }
-
-  location = /app/ {
-    return 302 /app/media-plans/;
   }
 
   location = /nginx-route {
