--- a/static/package.json
+++ b/static/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "del": "^1.2.0",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-angular-gettext": "^2.2.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-cached": "^1.1.0",
     "gulp-debug": "^2.0.1",
